--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 
-html {
+body {
     background: #111827;
+    color: white;
     font-family: Roboto-regular;
 }
 
@@ -16,33 +17,73 @@ html {
         margin-top: 4em;
     }
 
-
-
-
     .navbarLink {
-        color: #fff;
         font-size: 1.5em;
         text-decoration: none;
         margin: 0 10px;
         padding: 10px;
         border-radius: 5px;
         transition: 0.5s;
+        color: white;
     }
 
     #nameSection {
         text-align: center;
         border: red 2px solid;
         border-radius: 28px;
-        margin: 6em 15em 5em 15em;
+        margin: 2em 2em 2em 2em;
+        padding: 1em;
+        font-size: 5em;
         transition: 0.5s;
-
 
         -webkit-box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 31px 16px 15px 11px rgba(0, 0, 0, 0);
         box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 31px 16px 15px 11px rgba(0, 0, 0, 0);
     }
 
-    #nameSection p {
-        color: #fff;
-        font-size: 7em;
+    #aboutMeSection{
+
+        margin: 10em 4em 4em 4em;
+
     }
+
+    #firstSection {
+        display: flex;
+    }
+
+    #descriptionAndTechnicalSection {
+        
+    }
+
+    #descriptionSection {
+        margin: 1em;
+        border: blue 1px solid;
+        padding: 2em;
+    }
+
+    #technicalSection {
+        border: yellow 1px solid;
+        margin: 1em;
+        margin-bottom: 0px;
+        padding: 2em 2em 20em 2em ;
+    }
+
+    #professionalBackgroundSection {
+        border: white 1px solid;
+        margin: 1em;
+        max-width: 20em;
+        padding: 2em;
+    }
+
+    #interestSection {
+        border: green 1px solid;
+        margin: 1em;
+        padding: 3em; 
+    }
+
+    #statusSection {
+        border: pink 1px solid;
+        margin: 1em;
+        padding: 2em; 
+    }
+
 }
